feat: authentication with Swan User Token
