# doc/api.yml
@@ -5,15 +5,50 @@ info:
 servers:
   - url: 'https://api-dev.bpartners.app'
 security:
-  - BearerAuth: []
+  - BearerAuth: [ ]
 paths:
+  /auth:
+    get:
+      tags:
+        - Security
+      summary: Redirect to the swan authentication
+      operationId: auth
+      security: [ ] #No security
+      responses:
+        '301':
+          description: Redirect to the swan's mobile identification
+        '500':
+          $ref: '#/components/responses/500'
+  /whoami:
+    get:
+      tags:
+        - Security
+      summary: Who am I ? Tells you who you are
+      operationId: whoami
+      responses:
+        '200':
+          description: Who you are
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OauthToken'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
   /ping:
     get:
       tags:
         - Security
       summary: pong
       operationId: ping
-      security: [] # No security
+      security: [ ] # No security
       responses:
         '200':
           description: pong
@@ -97,6 +132,71 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+  /accounts:
+    get:
+      tags:
+        - Users
+      summary: Get all accounts
+      operationId: getAccounts
+      parameters:
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+          required: true
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+          required: true
+      responses:
+        '200':
+          description: List of accounts.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Account'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  /accounts/{id}:
+    get:
+      tags:
+        - Users
+      summary: Get account by identifier
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: getAccountById
+      responses:
+        '200':
+          description: The identified account
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Account'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -146,6 +246,16 @@ components:
           default: 5
         status:
           $ref: '#/components/schemas/EnableStatus'
+    Account:
+      allOf:
+        - $ref: '#/components/schemas/SwanAccount'
+      properties:
+        id:
+          type: string
+          example: 'uuid'
+        user_id:
+          type: string
+          example: 'uuid'
     SwanUser:
       type: object
       properties:
@@ -172,11 +282,25 @@ components:
         mobilePhoneNumber:
           type: string
           example: "+33 1 23 45 67 89"
+    SwanAccount:
+      properties:
+        swan_id:
+          type: integer
+        name:
+          type: string
     EnableStatus:
       type: string
       enum:
         - ENABLED
         - DISABLED
+    OauthToken:
+      properties:
+        id_token:
+          type: string
+        access_token:
+          type: string
+        refresh_token:
+          type: string
     Page:
       type: integer
       description: Start at `1`
